// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LoadingSpinner> that renders a circular loading spinner should add classes when props are changed 1`] = `
<div
  aria-busy={false}
  aria-hidden={true}
  className="LoadingSpinner LoadingSpinner--hidden LoadingSpinner--centerIn_viewport"
  role="status"
>
  <svg
    className="LoadingSpinner__svg"
    style={
      Object {
        "height": 12,
        "width": 12,
      }
    }
    viewBox={
      Array [
        0,
        0,
        44,
        44,
      ]
    }
  >
    <circle
      className="LoadingSpinner__path LoadingSpinner__path--context_primary"
      cx="22"
      cy="22"
      fill="none"
      r="20"
      strokeWidth="4"
    />
  </svg>
</div>
`;

exports[`<LoadingSpinner> that renders a circular loading spinner should render a default spinner correctly 1`] = `
<div
  aria-busy={true}
  aria-hidden={false}
  className="LoadingSpinner"
  role="status"
>
  <svg
    className="LoadingSpinner__svg"
    style={null}
    viewBox={
      Array [
        0,
        0,
        44,
        44,
      ]
    }
  >
    <circle
      className="LoadingSpinner__path LoadingSpinner__path--context_brand"
      cx="22"
      cy="22"
      fill="none"
      r="20"
      strokeWidth="4"
    />
  </svg>
</div>
`;

exports[`<LoadingSpinner> that renders a circular loading spinner should render a spinner with label 1`] = `
<div
  aria-busy={true}
  aria-hidden={false}
  className="LoadingSpinner"
  role="status"
>
  <svg
    className="LoadingSpinner__svg"
    style={null}
    viewBox={
      Array [
        0,
        0,
        44,
        44,
      ]
    }
  >
    <circle
      className="LoadingSpinner__path LoadingSpinner__path--context_brand"
      cx="22"
      cy="22"
      fill="none"
      r="20"
      strokeWidth="4"
    />
  </svg>
  <Text
    className="LoadingSpinner__label"
    context="default"
    inline={true}
    size="normal"
  >
    Loading...
  </Text>
</div>
`;
